fix: Adjusting overlap padding

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   color: rgb(103, 57, 57);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
 }
@@ -23,7 +23,7 @@ header {
 }
 
 h1 {
-  font-size: 1.7em;
+  font-size: 1.8em;
   font-weight: bold;
 }
 
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.3em;
   padding-bottom: 1em;
   text-decoration: underline;
   text-transform: uppercase;
@@ -71,7 +71,6 @@ dd ul {
 footer {
   align-items: center;
   background-color: white;
-  display: flex;
   height: 50px;
 }
 
